--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,15 @@
     <title>Document</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section>
+        <form action="">
+          <input type="text" />
+        </form>
+      </section>
+      <include src="./sections/degree.html"></include>
+    </main>
+
     <script src="js/index.js" type="module"></script>
   </body>
 </html>
