--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./style.css" /> -->
+    <!-- <link rel="icon" href="" /> -->
     <title>Document</title>
   </head>
   <body>
@@ -20,7 +20,7 @@
       </ul>
       <include src="./sections/degree.html"></include>
     </main>
-
+    <div class="image"></div>
     <!-- <script src="js/index.js" type="module"></script> -->
   </body>
 </html>
